# prm-ws

./: .gitignore  .gitmodules  CLAUDE.md  README.md  package.xml  setup.cfg  setup.py
description/: robot.urdf.xacro
launch/: carrega_robo.launch.py  editar_mundo.launch.py  inicia_simulacao.launch.py  teste_urdf.launch.py
src/bb8_control/: README.md  package.xml  setup.py
src/bb8_control/bb8_control/: controle_robo.py  controle_robo_complex.py  d_star_lite.py  diagnostics.py  explorador.py  map_padder.py  maquina_estados.py  odom_gt_publisher.py  vision_processor.py
src/bb8_control/config/: explore.yaml  nav2_params.yaml  slam_params.yaml
src/bb8_control/launch/: control.launch.py  diagnostics.launch.py  explore.launch.py  explore_control.launch.py  full_project.launch.py  main_exploration.launch.py  minimal.launch.py  missao_completa_launch.py  nav2.launch.py  nav_perception.launch.py  perception.launch.py  sim_slam.launch.py  simulation_slam.launch.py  slam.launch.py
src/bb8_slam/: CMakeLists.txt  package.xml
src/bb8_slam/config/: mapper_params.yaml
src/bb8_slam/launch/: slam_launch.py
src/bb8_visual_slam/: package.xml  setup.py
src/bb8_visual_slam/launch/: visual_slam.launch.py
src/m-explore-ros2/explore/: CMakeLists.txt
src/m-explore-ros2/explore/src/: explore.cpp
src/prm_2026/config/: controller_config.yaml
src/prm_2026/description/: robot.urdf.xacro
src/prm_2026/launch/: carrega_robo.launch.py  inicia_simulacao.launch.py
src/prm_2026/prm_2026/: controle_robo.py
src/prm_2026/rviz/: rviz_config.rviz
(+1 files in other folders)
