<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bb8_visual_slam</name>
  <version>0.0.0</version>
  <description>Optional visual SLAM (RTAB-Map + laser) for the BB8 robot. Run instead of simulation_slam.launch.py.</description>
  <maintainer email="pedrolunkesvillela@usp.br">banoffee</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>rtabmap_ros</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>prm_2026</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
